--- a/force-app/main/default/classes/ContentDocumentLinkTriggerHandler.cls
+++ b/force-app/main/default/classes/ContentDocumentLinkTriggerHandler.cls
@@ -4,15 +4,16 @@ public with sharing class ContentDocumentLinkTriggerHandler extends TriggerHandl
 
         ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
         contentDocumentLinkService.extendSharingToAllUsers(newList);
+        contentDocumentLinkService.validateImageTypes(newList);
     }
     public override void afterInsert(List<SObject> newList) {
         ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
         contentDocumentLinkService.remindEventFire(newList);
+        contentDocumentLinkService.createURLsForImagesOnResources(newList);
     }
 
     public override void afterDelete(List<SObject> oldList) {
         ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
         contentDocumentLinkService.remindEventFire(oldList);
     }
-
 }
