--- a/force-app/main/default/classes/AuraHelper.cls
+++ b/force-app/main/default/classes/AuraHelper.cls
@@ -5,6 +5,7 @@
 public class AuraHelper {
     
     public static Object throwException(Exception e){
+        System.debug('THROW EXCEPTION: ' + e.getMessage() + '\n' + e.getStackTraceString());
         throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
     }
 }
