--- a/force-app/main/default/classes/Alert.cls
+++ b/force-app/main/default/classes/Alert.cls
@@ -70,9 +70,12 @@ public class Alert {
         }
 
         String userName = [SELECT Name FROM Contact WHERE Id =: contactId].Name;
-        List<Participant__c> participants = [SELECT Id, Full_Name__c FROM Participant__c WHERE Contact__c = :contactId];
+        List<Participant__c> participants = [SELECT Id, First_Name__c FROM Participant__c WHERE Contact__c = :contactId];
         if(!participants.isEmpty()) {
-            userName = participants.get(0).Full_Name__c;
+            userName = participants.get(0).First_Name__c;
+        }
+        else {
+            userName = PatientDelegateService.getInstance().getDelegateContact(contactId).FirstName;
         }
         List<Alert> resultList = new List<Alert>();
         for(Alert__c dbAlert : dbAlerts) {
