--- a/force-app/main/default/classes/PatientDelegateService.cls
+++ b/force-app/main/default/classes/PatientDelegateService.cls
@@ -7,6 +7,9 @@ public without sharing class PatientDelegateService {
     public class PatientDelegateServiceException extends Exception {
     }
 
+    public static final String PH_WELCOME_CODE = 'Welcome_To_The_PH_Delegate';
+    public static final String STUDY_WELCOME_CODE = 'Welcome_to_the_Study_Patient_Delegates';
+
     private List<Contact> delegates = new List<Contact>();
     private Boolean isDelegate;
     private Participant__c participant;
@@ -167,20 +170,19 @@ public without sharing class PatientDelegateService {
     }
 
     public void createPDAlerts(Contact contactDelegate) {
-        String phWelcomeCode = 'Welcome_To_The_PH';
-        String studyWelcomeCode = 'Welcome_to_the_Study_Patient_Delegates';
+        ParticipantService.ParticipantState participantState = ParticipantService.getInstance().getState();
 
         List<Alert__c> alertList = new List<Alert__c>();
         alertList.add(new Alert__c(
                 Contact__c = contactDelegate.Id,
-                Alert_Code__c = phWelcomeCode
+                Alert_Code__c = PH_WELCOME_CODE,
+                Record_ID__c = participantState.pe.Id
         ));
 
-        ParticipantService.ParticipantState participantState = ParticipantService.getInstance().getState();
         if (participantState.value == ParticipantService.ParticipantStates.PARTICIPANT) {
             alertList.add(new Alert__c(
                         Contact__c = contactDelegate.Id,
-                        Alert_Code__c = studyWelcomeCode,
+                        Alert_Code__c = STUDY_WELCOME_CODE,
                         Record_ID__c = participantState.pse.Id
                 ));
         }
