patient vt email fix

--- a/force-app/main/default/classes/ParametersDataProvider.cls
+++ b/force-app/main/default/classes/ParametersDataProvider.cls
@@ -120,6 +120,7 @@ public without sharing class ParametersDataProvider {
                         Participant__r.Language_Preference_Code__c,
                         Participant__r.First_Name__c,
                         Participant__r.Last_Name__c,
+                        Participant_Contact__r.FirstName,
                         Study_Site__r.Name,
                         Study_Site__r.Principal_Investigator__r.Name,
                         Study_Site__r.Principal_Investigator__r.Salutation,
@@ -138,6 +139,7 @@ public without sharing class ParametersDataProvider {
                 'PIName' => getFullContactName(pe.Study_Site__r.Principal_Investigator__r),
                 'PILanguage' => pe.Study_Site__r.Principal_Investigator__r.Language__c,
                 'ParticipantName' => getFullParticipantName(pe.Participant__r),
+                'ParticipantContactFirstName' => pe.Participant_Contact__r.FirstName,
                 'ParticipantLanguage' => getParticipantLanguage(pe.Participant__r),
                 'IsVirtual' => pe.Is_Virtual_Study_Site__c + ''
         };
@@ -306,7 +308,12 @@ public without sharing class ParametersDataProvider {
         else{
             userNameParam = userMode + 'Name';
         }
-        return parameters.get(userNameParam);
+        String name = parameters.get(userNameParam);
+        if(name == null) {
+            name = parameters.get('ParticipantContactFirstName');
+        }
+
+        return name;
     }
 
     public String getCommunityUserName(String contactId) {
